--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,8 @@ smtp_server_addr = "127.0.0.1:25"
 smtp_server_username = ""
 smtp_server_password = ""
 
-whitelist_domains = []
-whitelist_emails = []
+# list of emails or domains to let through.
+# Any matching addresses in the 'To:' field will cause the message to be whitelisted
+whitelist = ["ian@pace7.com", "yahoo.com.au"]
 
 storage_dir = ""
