--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,6 @@ smtp_server_password = ""
 
 # list of emails or domains to let through.
 # Any matching addresses in the 'To:' field will cause the message to be whitelisted
-whitelist = ["ian@pace7.com", "yahoo.com.au"]
+whitelist = ["foo@example.com", "yahoo.com.au"]
 
 storage_dir = ""
