--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: go
 sudo: false
-before_script:
+go:
+  - tip
+before_install:
   - go vet
+  - go get github.com/mattn/goveralls
+script:
+  - $HOME/gopath/bin/goveralls -service=travis-ci
